--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,15 +12,23 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Python (Pandas, PyTorch, NumPy, Scikit‑learn. etc.), R(ggplot2), PHP, C/C++, HTML/CSS, JavaScript, SQL.} % Skills
+    {C, Bash, Java, Javascript, Latex, Lua, Nix, PHP, SQL} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Operating System} % Category
+    {Centos, Alma linux, Debian, Ubuntu, NixOS, Proxmox,
+    Fedora} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Server \& Network} % Category
+    {GNS3, firewalld, UFW, iDRAC, Systemd, MySQL, MariaDB,
+    Nginx, Apache, Docker, Podman, Qemu, Wireguard, OpenVPN} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Miscellaneous} % Category
-    {Linux, Shell (Bash/Zsh), \LaTeX (Overleaf/R Markdown), Tableau, Microsoft Office, Firebase, Git.} % Skills
-%---------------------------------------------------------
-  \cvskill
-    {Soft Skills} % Category
-    {Time Management, Teamwork, Problem-solving, Documentation, Engaging Presentation.} % Skills
+    {Git, Vim/Neovim} % Skills
 
 \end{cvskills}
