--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -10,5 +10,10 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-A University of Leeds graduate student who is enrolled in the Data Science and Analysis programme. Dedicated to software engineering, having two or more years of expertise, and specialising in full-stack web development, algorithms, and machine learning. Searching mostly for Machine Learning, Data Engineer, and Python Development positions.
+  Saya adalah lulusan Strata 1 Informatika, pengguna Linux
+  dan BSD sejak 2016 dan penghobi \textit{self-hosted}. Saya
+  tertarik dengan infrastruktur jaringan dan administrasi
+  server. Selain itu saya juga penggemar pemrograman C,
+  teknologi \textit{container}, virtualisasi ,dan
+  \textit{reproducibility}.
 \end{cvparagraph}
