--- a/cv/education.tex
+++ b/cv/education.tex
@@ -11,39 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {MSc in Data Science and Analysis} % Degree
-    {University of Leeds} % Institution
-    {Leeds, UK} % Location
-    {Sept 2021 - Current} % Date(s)
+    {Strata 1 Jurusan Informatika} % Degree
+    {Universitas Teknologi Digital Indonesia} % Institution
+    {Yogyakarta, Indonesia} % Location
+    {2019 - 2023} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Head of School International Excellence Scholar}
-        \item {Working as a PAL Mentor}
-        \item {\textbf{Courses:} Data Science, Programming for Data Science, Knowledge Representation and Reasoning, Statistical Theory and Methods, Learning Skills through Case Studies, Artificial Intelligence, Machine Learning, Statistical Learning}
-      \end{cvitems}
-    }
-    
-  \cventry
-    {BTech in Information Technology} % Degree
-    {Madhav Institute of Technology and Science} % Institution
-    {Gwalior, India} % Location
-    {May 2016 - May 2020} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Graduated with Distinction}
-        \item {Selected for Industrial Visit among the top of the class} 
-      \end{cvitems}
-    }
-    
-  \cventry
-    {High School} % Degree
-    {Atomic Energy Central School} % Institution
-    {Indore, India} % Location
-    {Apr 2014 - Apr 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Passed with Distinction}
-        \item {Specialised in Physics, Chemistry, and Maths with Computer Science}
+        \item {GPA 3.72/4.00}
+        \item {Terpilih mengikuti program Kampus Merdeka
+          Angkatan 1, dan Angkatan 3}
       \end{cvitems}
     }
 %---------------------------------------------------------
