--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -11,17 +11,45 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Engineer} % Job title
-    {Indian Institute of Technology} % Organisation
-    {Indore, India} % Location
-    {Sept 2020 - Aug 2021} % Date(s)
+    {Server Management} % Job title
+    {PT Pundi Mas Berjaya} % Organisation
+    {Batam, Indonesia} % Location
+    {Agustus 2022 - Desember 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Collaborated with a four-person team to develop a CNN model that utilised YOLO as a foundation to improve the accuracy of ambient lighting conditions in the Mobile net architecture.}
-        \item {Automated and optimised the data handling process for traffic signs, working with Ubuntu 20.04 did shell scripting, and employed other Linux tools.}
-        \item {Significantly boosted the model's accuracy by 60\%, which was yielding an accuracy of 70-78\% under Indian street light. The older models, had an accuracy of 10-15\%.}
-        \item {\textbf{Technical Skills:} Python with PyTorch, NumPy, Matplotlib, Pandas, Scikit-learn, C++, Ubuntu Linux, Linux tools, Apt, Scripting, Git.}
-        \item {\textbf{Soft Skills:} Teamwork, Time Management, Communication, Presentation skills.}
+        \item {Hardware \& Software server maintenance}
+        \item {Monitoring \& Logging server}
+        \item {Monitoring \& Logging network}
+        \item {Troubleshooting}
+        \item {Setting-up email server}
+        \item {Managing DNS}
+        \item {Deploying container \& virtual machine}
+        \item {Designing Network}
+      \end{cvitems}
+    }
+
+  \cventry
+    {Web Admin}
+    {Dinas Kesehatan Prov. DIY}
+    {Yogyakarta, Indonesia}
+    {Juli 2022 - Agustus 2022}
+    {
+      \begin{cvitems}
+      \item {Deploying \& Managing Web}
+      \item {Giving advice for web design}
+      \end{cvitems}
+    }
+
+  \cventry
+    {Dicoding Kampus Merdeka, Front End Web \& Back End Developer}
+    {PT Presentologics}
+    {Bandung, Indonesia}
+    {Agustus 2021 - Januari 2022}
+    {
+      \begin{cvitems}
+      \item {AWS Cloud Training}
+      \item {Developing Javascript Web Apps}
+      \item {Deploying Javascript Web Apps}
       \end{cvitems}
     }
 
