--- a/resume.tex
+++ b/resume.tex
@@ -37,16 +37,16 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Doe}{John}
+\name{Aldzikri Dwijayanto}{Prathama}
 % \position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{YOUR ADDRESS}
+%\address{YOUR ADDRESS}
 
-\mobile{000000000000}
-\email{thisis@fakeemail.com}
+\mobile{+6285641486513}
+\email{aldzikridp@gmail.com}
 %\dateofbirth{January 1st, 1970}
-\homepage{themagicalmammal.vercel.app} 
-\github{themagicalmammal}
-\linkedin{themagicalmammal}
+%\homepage{themagicalmammal.vercel.app} 
+\github{aldzikridp}
+\linkedin{aldzikridp}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -76,26 +76,22 @@
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
-\makecvfooter
-  {\today}
-  {}
-  {\thepage}
+%\makecvfooter
+%  {\today}
+%  {}
+%  {\thepage}
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{cv/summary.tex}
-\input{cv/education.tex}
 \input{cv/experience.tex}
-\input{cv/projects.tex}
 \input{cv/skills.tex}
-\input{cv/achievements.tex}
-\input{cv/publications.tex}
-\input{cv/interests.tex}
-\input{cv/languages.tex}
+\input{cv/education.tex}
+\input{cv/certificates.tex}
 
-\vspace*{\fill}
-\centering{\textbf{References available upon request.}}
+%\vspace*{\fill}
+%\centering{\textbf{References available upon request.}}
 %-------------------------------------------------------------------------------
 \end{document}
