--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -10,10 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-  Saya adalah lulusan Strata 1 Informatika, pengguna Linux
-  dan BSD sejak 2016 dan penghobi \textit{self-hosted}. Saya
-  tertarik dengan infrastruktur jaringan dan administrasi
-  server. Selain itu saya juga penggemar pemrograman C,
-  teknologi \textit{container}, virtualisasi ,dan
-  \textit{reproducibility}.
+  I am a graduate of Bachelor's Degree in Informatics, and have been a Linux and BSD user since 2016 as well as a self-hosting enthusiast. I am interested in network infrastructure and server administration. In addition, I am also a fan of programming in C, container technologies, virtualization, and reproducibility.
 \end{cvparagraph}
