translate achievment to english

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -18,8 +18,8 @@
     {
       \begin{cvitems} % Description(s) bullet points
         \item {GPA 3.72/4.00}
-        \item {Terpilih mengikuti program Kampus Merdeka
-          Angkatan 1, dan Angkatan 3}
+        \item {Participated in The Kampus Merdeka program
+          batch 1 and batch 3}
       \end{cvitems}
     }
 %---------------------------------------------------------
